--- a/frontend/my-app/src/app/styles/navbar.module.css
+++ b/frontend/my-app/src/app/styles/navbar.module.css
@@ -6,8 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 40px;
+    padding: 0 20px;
     margin: 1%;
+    /* border: 1px solid red; */
     border-radius: 12px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   }
