--- a/frontend/my-app/src/app/styles/assignTable.module.css
+++ b/frontend/my-app/src/app/styles/assignTable.module.css
@@ -1,59 +1,103 @@
 .tableWrapper {
-    padding: 1rem;
-    background: #fff;
-    border-radius: 12px;
-    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
-    /* border: 1px solid red; */
-    height: 78.6vh;
-  }
-  
-  .controls {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    flex-wrap: wrap;
-  }
-  
-  .controls input,
-  .controls select {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 14px;
-  }
-  
-  .taskTable {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .taskTable th,
-  .taskTable td {
-    border: 1px solid #e0e0e0;
-    padding: 0.75rem;
-    text-align: left;
-  }
-  
-  .taskTable th {
-    background-color: #f0f2f5;
-    font-weight: 600;
-  }
-  
-  .taskTable tr:nth-child(even) {
-    background-color: #fafafa;
-  }
-  .actionBtn {
-    margin-right: 0.5rem;
-    padding: 0.3rem 0.6rem;
-    font-size: 12px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  
-  .actionBtn:last-child {
-    background-color: #dc3545;
-  }
-  
+  padding: 1rem;
+  background: #fff;
+  border-radius: 12px;
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
+  /* border: 1px solid red; */
+  height: 78.6vh;
+}
+
+.controls {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.controls input,
+.controls select {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 14px;
+}
+
+.taskTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.taskTable th,
+.taskTable td {
+  border: 1px solid #e0e0e0;
+  padding: 0.75rem;
+  text-align: left;
+}
+
+.taskTable th {
+  background-color: #f0f2f5;
+  font-weight: 600;
+}
+
+.taskTable tr:nth-child(even) {
+  background-color: #fafafa;
+}
+.actionBtn {
+  margin-right: -0.5rem;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  /* background-color: #007bff;
+  color: white; */
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 8px;
+  max-width: 400px;
+  width: 100%;
+}
+
+.modalActions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 1rem;
+}
+
+.form input,
+.form textarea,
+.form select {
+  width: 100%;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+}
+.search input{
+  height: 30px;
+  width: 200%;
+}
+.selects{
+  /* border: 1px solid; */
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
