--- a/frontend/my-app/src/app/styles/home.module.css
+++ b/frontend/my-app/src/app/styles/home.module.css
@@ -1,12 +1,13 @@
 
 .box {
-  height: 82vh;
+  height: 96vh;
     width: 98%;
     margin: 0.1% 1%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, 
                 rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     border-radius: 12px;
     display: flex;
+    margin-top: 1%;
 }
 
 .contentSection {
